--- a/metadata.yaml
+++ b/metadata.yaml
@@ -1,5 +1,8 @@
 _repo: The-A-B-C-of-Relativity_67104
 _version: 0.1.0
+covers:
+- cover_type: archival
+  image_path: 67104-h/images/cover.jpg
 creator:
   author:
     agent_name: Russell, Bertrand
@@ -12,6 +15,8 @@ creator:
     url: http://www.gutenberg.org/2009/agents/355
     wikipedia: https://en.wikipedia.org/wiki/Bertrand_Russell
 description: ''
+edition_identifiers:
+  edition_id: http://www.gutenberg.org/ebooks/67104#The-A-B-C-of-Relativity
 gutenberg_issued: '2022-01-04'
 identifiers:
   gutenberg: '67104'
